--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="./psx-box by wiired24_files/css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./psx-box by wiired24_files/style.css" media="screen" type="text/css">
     <link rel="stylesheet" href="./psx-box by wiired24_files/print.css" media="print" type="text/css">
-    <link rel="icon" type="image/png" href="/image.png">
+    <link rel="icon" type="image/png" href="/images.png">
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
